--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </h2>
             </div>
             <!-- Form Login -->
-            <form id="login-form" class="mt-8 space-y-6" action="#" method="POST">
+            <form id="login-form" class="mt-8 space-y-6">
                 <div class="rounded-md shadow-sm -space-y-px">
                     <div>
                         <input id="login-email" name="email" type="email" autocomplete="email" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Alamat email">
@@ -45,7 +45,7 @@
                 </div>
             </form>
             <!-- Form Registrasi -->
-            <form id="register-form" class="mt-8 space-y-6 hidden" action="#" method="POST">
+            <form id="register-form" class="mt-8 space-y-6 hidden">
                  <div class="rounded-md shadow-sm -space-y-px">
                     <div>
                         <input id="register-email" name="email" type="email" autocomplete="email" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Alamat email">
@@ -891,4 +891,5 @@
     </script>
 </body>
 </html>
+
 
