--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
                                 <th class="p-4">Nama Paket</th>
                                 <th class="p-4">Kecepatan</th>
                                 <th class="p-4">Harga</th>
-                                <th class="p-4">Harga Prorate</th>
+                                <!-- PERUBAHAN: Label di tabel diubah -->
+                                <th class="p-4">Harga Harian Prorate</th>
                                 <th class="p-4">Aksi</th>
                             </tr>
                         </thead>
@@ -343,9 +344,10 @@
                     <label for="harga" class="block text-sm font-medium text-gray-700 mb-1">Harga (Rp)</label>
                     <input type="number" id="harga" class="w-full p-2 border rounded-lg" required>
                 </div>
+                <!-- PERUBAHAN: Label di modal diubah -->
                 <div class="mb-6">
-                    <label for="harga-prorate" class="block text-sm font-medium text-gray-700 mb-1">Harga Prorate (Rp) - Opsional</label>
-                    <input type="number" id="harga-prorate" class="w-full p-2 border rounded-lg" placeholder="Isi jika ada harga prorata khusus">
+                    <label for="harga-prorate" class="block text-sm font-medium text-gray-700 mb-1">Harga Harian Prorate (Rp) - Opsional</label>
+                    <input type="number" id="harga-prorate" class="w-full p-2 border rounded-lg" placeholder="Isi jika ada tarif prorata harian">
                 </div>
                 <div class="flex justify-end gap-4">
                     <button type="button" id="btn-cancel-paket" class="px-4 py-2 bg-gray-200 rounded-lg hover:bg-gray-300">Batal</button>
@@ -559,15 +561,18 @@
             const year = joinDate.getFullYear();
             const month = joinDate.getMonth();
             
+            // PERUBAHAN: Logika kalkulasi prorata diubah
+            const dayOfMonth = joinDate.getDate();
+            const daysInMonth = new Date(year, month + 1, 0).getDate();
+            const daysOfService = daysInMonth - dayOfMonth + 1;
+            if (daysOfService <= 0) return;
+
             let proratedAmount = 0;
             if (pkg.hargaProrate && pkg.hargaProrate > 0) {
-                proratedAmount = pkg.hargaProrate;
+                // Kalkulasi baru: Harga Harian Prorate * Jumlah Hari Layanan
+                proratedAmount = pkg.hargaProrate * daysOfService;
             } else {
-                const dayOfMonth = joinDate.getDate();
-                const daysInMonth = new Date(year, month + 1, 0).getDate();
-                const daysOfService = daysInMonth - dayOfMonth + 1;
-                if (daysOfService <= 0) return;
-
+                // Fallback: Kalkulasi lama jika harga harian tidak di-set
                 const dailyRate = pkg.harga / daysInMonth;
                 proratedAmount = Math.round(dailyRate * daysOfService);
             }
@@ -618,14 +623,16 @@
                     const pkg = allPackages.find(p => p.id === customer.paketId);
                     if (!pkg) continue;
 
+                    // PERUBAHAN: Logika kalkulasi prorata diubah juga di sini
+                    const dayOfMonth = joinDate.getDate();
+                    const daysInMonth = new Date(year, month + 1, 0).getDate();
+                    const daysOfService = daysInMonth - dayOfMonth + 1;
+                    if (daysOfService <= 0) continue;
+
                     let proratedAmount = 0;
                     if (pkg.hargaProrate && pkg.hargaProrate > 0) {
-                        proratedAmount = pkg.hargaProrate;
+                        proratedAmount = pkg.hargaProrate * daysOfService;
                     } else {
-                        const dayOfMonth = joinDate.getDate();
-                        const daysInMonth = new Date(year, month + 1, 0).getDate();
-                        const daysOfService = daysInMonth - dayOfMonth + 1;
-                        if (daysOfService <= 0) continue;
                         const dailyRate = pkg.harga / daysInMonth;
                         proratedAmount = Math.round(dailyRate * daysOfService);
                     }
@@ -1014,3 +1021,4 @@
     </script>
 </body>
 </html>
+
