--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         const dataContainerPath = "jaganetwork_data/shared_workspace";
         const getCollectionRef = (name) => collection(db, dataContainerPath, name);
 
-        // --- Sisa kode JavaScript akan sama seperti sebelumnya ---
+        // ... Sisa kode JavaScript akan sama seperti sebelumnya ...
         function loadCustomers() {
             const q = query(getCollectionRef('customers'));
             if (unsubscribeCustomers) unsubscribeCustomers();
