--- a/analytics.html
+++ b/analytics.html
@@ -302,7 +302,7 @@
                         { label: 'Laba Kotor', data: Object.values(history).map(h => h.profit), backgroundColor: '#10b981' }
                     ]
                 },
-                options: { scales: { x: { stacked: false }, y: { stacked: false, beginAtZero: true } } }
+                options: { scales: { x: { stacked: false }, y: { stacked: false } } }
             });
 
             // Revenue Composition Chart
